[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Slingshot.gd" type="Script" id=1]
[ext_resource path="res://assets/gameplay/slingshot_2.png" type="Texture" id=2]
[ext_resource path="res://assets/gameplay/slingshot.png" type="Texture" id=3]
[ext_resource path="res://scenes/Elastic.tscn" type="PackedScene" id=4]

[node name="Slingshot" type="Node2D"]
script = ExtResource( 1 )

[node name="SlingshotBack" type="Sprite" parent="."]
position = Vector2( -13, -49 )
texture = ExtResource( 2 )

[node name="SlingshotFront" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="LaunchPoint" type="Position2D" parent="."]
position = Vector2( 6.31766, -73.258 )

[node name="ElasticBack" parent="." instance=ExtResource( 4 )]
position = Vector2( 27.0846, -76.5139 )

[node name="ElasticFront" parent="." instance=ExtResource( 4 )]
position = Vector2( -16.4072, -68.4818 )
